--- a/MyEndpointProject.Api/Properties/launchSettings.json
+++ b/MyEndpointProject.Api/Properties/launchSettings.json
@@ -12,8 +12,9 @@
     "Swagger": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:8080",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
